# volta-gateway

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README-ja.md  README.md  volta-gateway.full.yaml  volta-gateway.minimal.yaml  volta-gateway.yaml
.claude/rules/: dre-skill-control.md
.claude/skills/: architect-to-task.md  backlog-management.md  dge-character-create.md  dge-session.md  dge-update.md  doc-to-instruction.md  dre-activate.md  dre-reset.md  dre-uninstall.md  dve-annotate.md  dve-build.md  dve-context.md  dve-serve.md  dve-status.md  dve-trace.md  dxe-command.md  phase.md  release.md  spec-update.md  story-driven-discovery.md  test.md
.github/workflows/: ci.yml
auth-core/: Cargo.toml  README.md
auth-core/migrations/: 001_create_users.sql  002_create_tenants.sql  003_create_memberships.sql  004_create_invitations.sql  005_create_invitation_usages.sql  006_create_auth_flows.sql  007_create_auth_flow_transitions.sql  008_create_sessions.sql  009_create_user_mfa.sql  010_create_mfa_recovery_codes.sql  011_create_magic_links.sql  012_create_signing_keys.sql  013_create_idp_configs.sql  014_create_m2m_clients.sql  015_create_user_passkeys.sql  016_create_webhooks.sql  017_create_audit_logs.sql  018_create_devices.sql  019_create_billing.sql  020_create_policies.sql  021_pagination_indexes.sql  022_create_oidc_flows.sql  023_create_passkey_challenges.sql  024_create_notification_jobs.sql  025_create_email_verification_tokens.sql  026_create_login_challenges.sql  027_user_mfa_unique_index.sql
auth-core/src/: crypto.rs  error.rs  idp.rs  jwks.rs  jwt.rs  lib.rs  oidc.rs  passkey.rs  policy.rs  record.rs  runtime.rs  service.rs  session.rs  store.rs  token.rs  totp.rs
auth-core/src/flow/: email_verification.rs  invite.rs  login_challenge.rs  mermaid.rs  mfa.rs  mfa_setup.rs  mod.rs  oidc.rs  passkey.rs  password_reset.rs  registration.rs  validate.rs
auth-core/src/notification/: dummy.rs  mod.rs
auth-core/src/record/: flow.rs  idp_config.rs  invitation.rs  login_challenge.rs  membership.rs  mfa.rs  mod.rs  notification.rs  oidc_flow.rs  platform.rs  tenant.rs  user.rs  verification.rs
auth-core/src/store/: flow.rs  idp_config.rs  invitation.rs  login_challenge.rs  membership.rs  mfa.rs  mod.rs  notification_job.rs  oidc_flow.rs  passkey_challenge.rs  pg.rs  platform.rs  session.rs  tenant.rs  user.rs  verification_token.rs
auth-core/src/testdata/: rsa_n.txt
auth-core/tests/: email_verification_token_test.rs  login_challenge_test.rs  mfa_setup_test.rs  notification_job_test.rs  pg_store_test.rs  registration_runtime_test.rs
auth-server/: Cargo.toml  README.md
auth-server/docs/: README.md  backlog.md  sync-from-java-2026-04-14.md
auth-server/docs/arch/: audit-db-insert.md  bearer-m2m-scope.md  flow-definition-validation.md  mermaid-flow-diagrams.md  oidc-id-token-validation.md  passkey-webauthn-integration.md  redis-sse-bridge.md  saml-signature-verification.md
auth-server/docs/specs/: audit-db-insert.md  bearer-m2m-scope.md  flow-definition-validation.md  mermaid-flow-diagrams.md  oidc-id-token-validation.md  passkey-webauthn-integration.md  redis-sse-bridge.md  saml-signature-verification.md
auth-server/src/: app.rs  auth_events.rs  error.rs  helpers.rs  local_bypass.rs  main.rs  notification_providers.rs  notification_worker.rs  outbox_worker.rs  pagination.rs  rate_limit.rs  saml.rs  saml_dsig.rs  saml_sig.rs  security.rs  state.rs
auth-server/src/handlers/: admin.rs  auth.rs  extra.rs  health.rs  magic_link.rs  manage.rs  mfa.rs  mod.rs  oidc.rs  passkey_flow.rs  registration.rs  saml.rs  scim.rs  session.rs  signing_key.rs  user.rs  viz.rs  webhook.rs
benches/: e2e_results.md  mock_auth.rs  mock_backend.rs  proxy_bench.rs
benches/traefik/: dynamic.yaml  traefik.yaml
dge/: CUSTOMIZING.md  INTERNALS.md  LICENSE  README.md  dialogue-techniques.md  method.md  patterns.md
dge/characters/: beane.md  boku.md  catalog.md  fukasawa.md  hayashi.md  house.md  imaizumi.md  index.en.md  index.md  kinpachi.md  kouhai.md  levi.md  munger.md  opa.md  owada.md  red-team.md  reinhard.md  saul.md  sengoku.md  shimakosaku.md  socrates.md  stage-director.md  tonegawa.md  ukyo.md  washizu.md  yang.md
dge/decisions/: DD-001-cors-default-deny.md  DD-002-l4-proxy-scope.md  DD-003-accept-criteria.md  DD-004-traefik-user-acquisition.md  DD-005-java-to-rust-migration.md  DD-006-auth-proxy-rs-repo.md  index.md
dge/flows/: brainstorm.yaml  consult.yaml  design-review.yaml  investigation.yaml  pitch.yaml  quick.yaml  tribunal.yaml  wargame.yaml
dge/papers/: volta-gateway-auth-proxy.md
dge/samples/: auth-api.md
dge/sessions/: 2026-04-07-gateway-phase2-design.md  2026-04-07-gateway-tribunal-v2.md  2026-04-07-gateway-tribunal-v3.md  2026-04-07-gateway-tribunal-v4.md  2026-04-07-gateway-tribunal-v5.md  2026-04-07-gateway-tribunal-v6.md  2026-04-07-gateway-tribunal-v7.md  2026-04-07-gateway-tribunal-v8.md  2026-04-07-gateway-tribunal-v9.md  2026-04-07-gateway-tribunal.md  2026-04-07-rust-sm-proxy-r2.md  2026-04-08-gateway-tribunal-v10.md  (+3 more)
docs/: HANDOFF.md  MESH-VPN-SPEC.md  architecture-ja.md  architecture.md  auth-degraded-mode.md  auth-flows-and-notifications-design.md  auth-runtime-and-notifications.md  backlog.md  benchmark-article.md  beyond-traefik-requirements.md  config-persistence.md  console-gateway-integration.md  feedback.md  gap-analysis-java-rust.md  getting-started-ja.md  getting-started.md  java-to-rust-migration-runbook.md  migration-from-traefik-ja.md  migration-from-traefik.md  parity-ja.md  parity.md  passkey-flows.md  passkey-resident-key.md  passkey-ux-design.md  tramli-review-v1.16.md
gateway/: Cargo.toml
spec/: SPEC.md
src/: auth.rs  config.rs  config_source.rs  flow.rs  l4_proxy.rs  lib.rs  main.rs  metrics.rs  middleware_ext.rs  mtls.rs  plugin.rs  proxy.rs  state.rs  tls.rs  websocket.rs
tests/: cache_plugin_test.rs  config_source_test.rs  flow_test.rs  integration_test.rs  proxy_test.rs
tools/traefik-to-volta/: Cargo.toml
tools/traefik-to-volta/src/: main.rs
volta-bin/: Cargo.toml
volta-bin/src/: main.rs
(+49 files in other folders)
