[package]
name = "volta-gateway"
version = "0.1.0"
edition = "2021"
description = "Auth-aware reverse proxy powered by state machine (tramli pattern)"

[dependencies]
# HTTP server + client
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Middleware
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "timeout"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
