[package]
name = "volta-gateway"
version = "0.1.0"
edition = "2021"
description = "Auth-aware reverse proxy powered by state machine (tramli pattern)"

[dependencies]
# HTTP server + client
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Middleware
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "compression-gzip", "compression-br"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# State machine
tramli = "0.1"

# IP allowlist (CIDR parsing)
ipnet = "2"

# Atomic config swap for hot reload
arc-swap = "1"

# TLS + ACME (Let's Encrypt)
tokio-rustls = "0.26"
rustls = "0.23"
rustls-acme = { version = "0.12", features = ["axum"] }
futures = "0.3"

# Compression
flate2 = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "proxy_bench"
harness = false

[[example]]
name = "mock_backend"

[[example]]
name = "mock_auth"
