[package]
name = "volta-auth-server"
version = "0.1.0"
edition = "2021"
description = "volta auth server — HTTP API layer for auth-core (100% Java volta-auth-proxy compatible)"

[dependencies]
# Auth core library
volta-auth-core = { path = "../auth-core", features = ["postgres", "webauthn"] }

# Bincode for serializing WebAuthn ceremony state (P1 #5)
bincode = "1"

# WebAuthn types surfaced in handler request/response bodies (P1 #5)
webauthn-rs = { version = "0.6.0-dev", features = ["danger-allow-state-serialisation"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# HTTP client (outbox webhook delivery)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ring = "0.17"

# URL encoding
urlencoding = "2"
url = "2"

# Unicode normalization (NFC for email comparison)
unicode-normalization = "0.1"

# CIDR parsing (local network bypass)
ipnet = "2"

# Constant-time comparison (fallback — also uses ring::constant_time)
subtle = "2.6"

# Async stream utilities for SSE fan-out (P1.2 auth event stream)
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# RNG for OIDC opaque state generation
rand = "0.8"

# Redis pub/sub for cross-instance SSE fan-out (P1 #7)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# SAML (XML parsing + signature verification)
xmlparser = "0.13"
base64 = "0.22"
x509-cert = { version = "0.2", features = ["pem"] }
der = "0.7"
rsa = { version = "0.9", features = ["sha2"] }
signature = "2"
