[package]
name = "volta"
version = "0.1.0"
edition = "2021"
description = "Unified volta binary — gateway + auth (in-process)"

[dependencies]
volta-gateway = { path = "../gateway" }
volta-auth-core = { path = "../auth-core" }
tramli = "3.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
