[package]
name = "traefik-to-volta"
version = "0.1.0"
edition = "2021"
description = "Convert Traefik config (labels/YAML) to volta-gateway YAML"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
